corrected spacing and font weight in mainnavigation

--- a/src/components/MainNaivagion/MainNavigation.module.css
+++ b/src/components/MainNaivagion/MainNavigation.module.css
@@ -38,6 +38,9 @@
 .logo img {
   max-height: 3rem;
 }
+logo span {
+  font-weight: 600;
+}
 .logo * {
   display: inline-block;
   font-size: 1.6rem;
@@ -57,4 +60,22 @@ a.activeNav::after {
   height: 0.4rem;
   background-color: var(--primary-color);
   background-repeat: no-repeat;
+}
+
+.login button {
+  background-color: #f7f7f7;
+}
+.auth {
+  display: flex;
+  gap: 1.2rem;
+}
+.category {
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
+}
+.category svg {
+  height: 0.3rem;
+  width: 0.4rem;
+  transform: translateY(0.07rem);
 }
