--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -3,7 +3,7 @@
   font-weight: 500;
   font-size: 1.2rem;
   color: #ffffff;
-  padding: 0.7rem 1.6rem;
+  padding: 0.7rem 0.8rem;
   border: 0.16rem solid var(--primary-color);
   border-radius: 0.6rem;
 }
@@ -11,30 +11,9 @@
   background-color: #ffffff;
   font-size: 1.2rem;
   font-weight: 500;
-  padding: 0.7rem 1.6rem;
+  padding: 0.7rem 1.2rem;
   color: #000000;
   /* padding: 0.85rem 1.2rem; */
   border: 0.16rem solid var(--primary-color);
   border-radius: 0.6rem;
-}
-
-.secondary:hover {
-  background-color: var(--primary-color);
-  font-weight: 500;
-  color: #ffffff;
-  padding: 0.7rem 1.6rem;
-  border: 0.16rem solid var(--primary-color);
-  border-radius: 0.6rem;
-  transform: scale(1.02);
-}
-
-.primary:hover {
-  background-color: #ffffff;
-  font-weight: 500;
-  padding: 0.7rem 1.6rem;
-  /* padding: 0.85rem 1.2rem; */
-  color: #000000;
-  border: 0.16rem solid var(--primary-color);
-  border-radius: 0.6rem;
-  transform: scale(1.02);
 }
