--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
 // <weight>: Use a value from 100 to 700 */
 @font-face {
   font-family: "Recoleta";
-  src: url("./assets/fonts/Recoleta-RegularDEMO.otf") format("opentype");
-  font-weight: 900;
-  font-style: normal;
+  src: url("./assets/fonts/Recoleta-Bold.ttf") format("opentype");
+  /* font-weight: 900;
+  font-style: normal; */
 }
 
 * {
